--- a/contatos.html
+++ b/contatos.html
@@ -16,33 +16,31 @@
     <title>Lavricartaxo</title>
 </head>
 <body>
-    <div class="header">
-        <div class="top">
-          <div class="logo">
-            <a href="index.html"><img src="Images/logo.png" alt="logo" class="logoIMG"></a> 
-          </div>
-          <div class="weatherWidget">
-            <div id="weatherWidget" >
-              <script type="text/javascript" async src="JS/weatherWidget.js"></script>
-            </div> 
-          </div>               
-        </div>    
+  <div class="header">
+    <div class="top">
+      <div class="logo">
+        <a href="index.html"><img src="Images/logo.png" alt="logo" class="logoIMG"></a> 
       </div>
-      <nav>
-        <ul class="navMenu">
-          <li class="menuText"><a href="index.html" >INICIO</a></li>
-          <li class="menuText"><a href="quemsomos.html">QUEM SOMOS</a></li>
-          <li class="menuText"><a href="galeria.html">GALERIA</a></li>
-          <li class="menuText"><a href="produtos.html" >PRODUTOS</a></li>
-          <li class="menuText"><a href="contatos.html" >CONTATOS</a></li>
-          <li class="menuText"><a href="marcas.html" >MARCAS</a></li>
-          <li class="menuText"><a href="associados.html" >ASSOCIADOS</a></li>   
-        </ul>
-      </nav>    
-      </div>
+      <div class="weatherWidget">
+        <div id="weatherWidget" >
+          <script type="text/javascript" async src="JS/weatherWidget.js"></script>
+        </div> 
+      </div>               
+    </div>    
+  </div>
+  <nav>
+    <ul class="navMenu">
+      <a href="index.html"><li class="menuText">INICIO</li></a>
+      <a href="quemsomos.html"><li class="menuText">QUEM SOMOS</li></a>
+      <a href="galeria.html"><li class="menuText">GALERIA</li></a>
+      <a href="produtos.html"><li class="menuText">PRODUTOS</li></a>
+      <a href="contatos.html"><li class="menuText">CONTATOS</li></a>
+      <a href="marcas.html"><li class="menuText">MARCAS</li></a>
+      <a href="associados.html"><li class="menuText">ASSOCIADOS</li></a>
+    </ul>
+  </nav>
       <div class="main">
         <div class="welcome">
-          <div class="info">
             <div class="mapa">
               <h1></br>Encontre-nos aqui</h1>
               <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12373.9691393483!2d-8.791160000000001!3d39.163528!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb27463f5a3d96d77!2sLavricartaxo-Cooperativa%20Agro-Pecu%C3%A1ria%20do%20Cartaxo%20C.R.L.!5e0!3m2!1spt-PT!2spt!4v1616068831267!5m2!1spt-PT!2spt" width="600" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
@@ -89,7 +87,6 @@
         </div>
       </section>
       <!-- End Contact Section -->
-      </div>
       <div class="col-sm-6">
         <h1></br>Contacte-nos</br></br></h1>
       </div>
