--- a/marcas.html
+++ b/marcas.html
@@ -26,13 +26,13 @@
   </div>
   <nav>
     <ul class="navMenu">
-      <li class="menuText"><a href="index.html" >INICIO</a></li>
-      <li class="menuText"><a href="quemsomos.html">QUEM SOMOS</a></li>
-      <li class="menuText"><a href="galeria.html">GALERIA</a></li>
-      <li class="menuText"><a href="produtos.html" >PRODUTOS</a></li>
-      <li class="menuText"><a href="contatos.html" >CONTATOS</a></li>
-      <li class="menuText"><a href="marcas.html" >MARCAS</a></li>
-      <li class="menuText"><a href="associados.html" >ASSOCIADOS</a></li>   
+      <a href="index.html"><li class="menuText">INICIO</li></a>
+      <a href="quemsomos.html"><li class="menuText">QUEM SOMOS</li></a>
+      <a href="galeria.html"><li class="menuText">GALERIA</li></a>
+      <a href="produtos.html"><li class="menuText">PRODUTOS</li></a>
+      <a href="contatos.html"><li class="menuText">CONTATOS</li></a>
+      <a href="marcas.html"><li class="menuText">MARCAS</li></a>
+      <a href="associados.html"><li class="menuText">ASSOCIADOS</li></a> 
     </ul>
   </nav>
   <div class="main">
