--- a/galeria.html
+++ b/galeria.html
@@ -1,110 +1,62 @@
 <!DOCTYPE html>
 <html lang="pt-pt">
-<head>
+  <head>
     <meta charset="UTF-8">
-    <link rel="icon" type="image/jpg" href="Images/icon.png" />
     <meta name="keywords" content="Cooperativa agricola do Cartaxo, Vinhas, Vinhos, adubos, agroquimicos, fitofarmacos, sementes, batatas, rações">
     <meta name="description" content="LAVRICARTAXO Cooperativa agricola do Cartaxo, Vinhas, Vinhos, adubos, agroquimicos, fitofarmacos, sementes, batatas, rações">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+    
+    <link rel="icon" type="image/jpg" href="Images/icon.png" />
     <link rel="stylesheet" href="CSS/style.css" type="text/css">
     <script src="JS/script.js"></script>
     <title>Lavricartaxo</title>
 </head>
 <body>
-    <div class="main1">
-        <div class="top">
-            <div class="logo">
-            <a href="index.html"><img src="Images/logo.png" alt="logo" width="auto"></a> 
-            </div>
-            <div class="weatherWidget">
-                <div id="weatherWidget" >
-                    <script type="text/javascript" async src="JS/weatherWidget.js"></script>
-                </div> 
-            </div>               
-        </div>
-        <div id="menu" class="menu">
-            <nav>
-                <ul class="nav_menu">
-                    <div class="menuButtons">
-                        <li class="menuText"><a href="index.html" >INICIO</a></li>
-                        <li class="menuText"><a href="quemsomos.html">QUEM SOMOS</a></li>
-                        <li class="menuText"><a href="galeria.html">GALERIA</a></li>
-                        <li class="menuText"><a href="produtos.html" >PRODUTOS</a></li>
-                        <li class="menuText"><a href="contatos.html" >CONTATOS</a></li>
-                        <li class="menuText"><a href="marcas.html" >MARCAS</a></li>
-                        <li class="menuText"><a href="associados.html" >ASSOCIADOS</a></li>
-                    </div>     
-                </ul>
-            </nav>
-        </div>
+  <div class="header">
+    <div class="top">
+      <div class="logo">
+        <a href="index.html"><img src="Images/logo.png" alt="logo" class="logoIMG"></a> 
+      </div>
+      <div class="weatherWidget">
+        <div id="weatherWidget" >
+          <script type="text/javascript" async src="JS/weatherWidget.js"></script>
+        </div> 
+      </div>               
+    </div>    
+  </div>
+  <nav>
+    <ul class="navMenu">
+      <li class="menuText"><a href="index.html" >INICIO</a></li>
+      <li class="menuText"><a href="quemsomos.html">QUEM SOMOS</a></li>
+      <li class="menuText"><a href="galeria.html">GALERIA</a></li>
+      <li class="menuText"><a href="produtos.html" >PRODUTOS</a></li>
+      <li class="menuText"><a href="contatos.html" >CONTATOS</a></li>
+      <li class="menuText"><a href="marcas.html" >MARCAS</a></li>
+      <li class="menuText"><a href="associados.html" >ASSOCIADOS</a></li>   
+    </ul>
+  </nav>
+  <div class="main">
+    <div class="slideshowGaleria">
+      <img src="Images/Slideshowtestimg1.jpg" alt="testimg" id="slideshowIMG" onload="slideShow()" class="slideshowimgs">
     </div>
-    <div class="main2">
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
+  </div>
+  <footer class="footerBottom">
+    <div class="wheretofindusFooter">
+      <p>ONDE NOS ENCONTRAR<br><br>Rua Batalhoz nr.81 &nbsp; 2070-069 Cartaxo</p>
     </div>
-    <footer id="footer">
-        <div class="footer-bottom">
-          <div class="container">
-            <div class="row">
-              <div class="col-sm-6">
-                <p>LAVRICARTAXO-Cooperativa Agro-Pecuaria do Cartaxo, C.R.L. </br>Rua Batalhoz nr.81</br>2070-069 Cartaxo</p>
-              </div>
-              <div class="col-sm-6">
-                <p></br>243 700 240</br></p>
-              </div>
-              <div class="col-sm-6">
-                <p>243 700 249</br></br></p>
-              </div>
-              <div class="col-sm-6">
-                <p>De Segunda a Sexta-feira das 9H ás 13H e das 14.30H ás 18.30H</br>Aos Sábados das 9H ás 12.30H</p>
-              </div>
-              <div class="col-sm-6">
-                </br>Copyright &copy; 2021 Lavricartaxo-Cooperativa Agro-Pecuária do Cartaxo, C.R.L.
-              </div>
-              <div class="col-sm-6" class="footer">
-                <p></br>Desenvolvimento e Design: <a href="https://www.analogia.net/?opx=entrar">ANALOGIA.NET</a></p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </footer>
+    <div class="contactusFooter">
+      <p>CONTACTE-NOS<br><br>243 700 240<br>243 700 249</p>
+    </div>
+    <div class="openFooter">
+      <p>ABERTOS<br><br>De Segunda a Sexta-feira das 9H ás 13H e das 14:30H ás 18:30H</br>Aos Sábados das 9H ás 12:30H</p>
+    </div>
+      <br><br><br><br><br><br>
+      <p>Copyright &copy; 2021 Lavricartaxo-Cooperativa Agro-Pecuária do Cartaxo, C.R.L.</p>
+      <p>Desenvolvimento e Design:<a href="https://www.analogia.net/?opx=entrar">ANALOGIA.NET</a></p>
+  </footer>
 </body>
 </html>
