--- a/index.html
+++ b/index.html
@@ -1,110 +1,139 @@
 <!DOCTYPE html>
 <html lang="pt-pt">
-<head>
-    <meta charset="UTF-8">
-    <link rel="icon" type="image/jpg" href="Images/icon.png" />
-    <meta name="keywords" content="Cooperativa agricola do Cartaxo, Vinhas, Vinhos, adubos, agroquimicos, fitofarmacos, sementes, batatas, rações">
-    <meta name="description" content="LAVRICARTAXO Cooperativa agricola do Cartaxo, Vinhas, Vinhos, adubos, agroquimicos, fitofarmacos, sementes, batatas, rações">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/style.css" type="text/css">
-    <script src="JS/script.js"></script>
-    <title>Lavricartaxo</title>
-</head>
+  <head>
+      <meta charset="UTF-8">
+      <meta name="keywords" content="Cooperativa agricola do Cartaxo, Vinhas, Vinhos, adubos, agroquimicos, fitofarmacos, sementes, batatas, rações">
+      <meta name="description" content="LAVRICARTAXO Cooperativa agricola do Cartaxo, Vinhas, Vinhos, adubos, agroquimicos, fitofarmacos, sementes, batatas, rações">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <!--bootstrap-->
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+      
+      <link rel="icon" type="image/jpg" href="Images/icon.png" />
+      <link rel="stylesheet" href="CSS/style.css" type="text/css">
+      <script src="JS/script.js"></script>
+      <title>Lavricartaxo</title>
+  </head>
 <body>
-    <div class="main1">
-        <div class="top">
-            <div class="logo">
-            <a href="index.html"><img src="Images/logo.png" alt="logo" width="auto"></a> 
-            </div>
-            <div class="weatherWidget">
-                <div id="weatherWidget" >
-                    <script type="text/javascript" async src="JS/weatherWidget.js"></script>
-                </div> 
-            </div>               
-        </div>
-        <div id="menu" class="menu">
-            <nav>
-                <ul class="nav_menu">
-                    <div class="menuButtons">
-                        <li class="menuText"><a href="index.html" >INICIO</a></li>
-                        <li class="menuText"><a href="quemsomos.html">QUEM SOMOS</a></li>
-                        <li class="menuText"><a href="galeria.html">GALERIA</a></li>
-                        <li class="menuText"><a href="produtos.html" >PRODUTOS</a></li>
-                        <li class="menuText"><a href="contatos.html" >CONTATOS</a></li>
-                        <li class="menuText"><a href="marcas.html" >MARCAS</a></li>
-                        <li class="menuText"><a href="associados.html" >ASSOCIADOS</a></li>
-                    </div>     
-                </ul>
-            </nav>
-        </div>
+  <div class="header">
+    <div class="top">
+      <div class="logo">
+        <a href="index.html"><img src="Images/logo.png" alt="logo" class="logoIMG"></a> 
+      </div>
+      <div class="weatherWidget">
+        <div id="weatherWidget" >
+          <script type="text/javascript" async src="JS/weatherWidget.js"></script>
+        </div> 
+      </div>               
+    </div>    
+  </div>
+  <nav>
+    <ul class="navMenu">
+      <li class="menuText"><a href="index.html" >INICIO</a></li>
+      <li class="menuText"><a href="quemsomos.html">QUEM SOMOS</a></li>
+      <li class="menuText"><a href="galeria.html">GALERIA</a></li>
+      <li class="menuText"><a href="produtos.html" >PRODUTOS</a></li>
+      <li class="menuText"><a href="contatos.html" >CONTATOS</a></li>
+      <li class="menuText"><a href="marcas.html" >MARCAS</a></li>
+      <li class="menuText"><a href="associados.html" >ASSOCIADOS</a></li>   
+    </ul>
+  </nav>
+  <div class="main">
+    <div class="news">
+      <script type="text/javascript" src="JS/newsWidget.js?widgettitle=Noticías&amp;categories=126,127,128,129,&amp;showRelease=1&amp;width=300px&amp;headlinebold=1&amp;headlinesonly=0&amp;headlinecolor=2d57a1&amp;briefcolor=666666&amp;textcolor=333333&amp;typeface=arial&amp;fontsize=11&amp;width=300px&amp;headlinesepstyle=dotted&amp;showimages=1&amp;numstories=5&amp;bgcolor=ffffff&amp;urldest=247pr "></script>
     </div>
-    <div class="main2">
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
+    <div class="slideshow">
+      <img src="Images/slideshow/1.jpg" id="slideshowIMG" onload="setTimeout(slideShow(),3000)" class="slideshowimgs">
     </div>
-    <footer id="footer">
-        <div class="footer-bottom">
-          <div class="container">
-            <div class="row">
-              <div class="col-sm-6">
-                <p>LAVRICARTAXO-Cooperativa Agro-Pecuaria do Cartaxo, C.R.L. </br>Rua Batalhoz nr.81</br>2070-069 Cartaxo</p>
-              </div>
-              <div class="col-sm-6">
-                <p></br>243 700 240</br></p>
-              </div>
-              <div class="col-sm-6">
-                <p>243 700 249</br></br></p>
-              </div>
-              <div class="col-sm-6">
-                <p>De Segunda a Sexta-feira das 9H ás 13H e das 14.30H ás 18.30H</br>Aos Sábados das 9H ás 12.30H</p>
-              </div>
-              <div class="col-sm-6">
-                </br>Copyright &copy; 2021 Lavricartaxo-Cooperativa Agro-Pecuária do Cartaxo, C.R.L.
-              </div>
-              <div class="col-sm-6" class="footer">
-                <p></br>Desenvolvimento e Design: <a href="https://www.analogia.net/?opx=entrar">ANALOGIA.NET</a></p>
-              </div>
+    <div class="welcome">
+      <p><br><h2><b>Seja bem vindo ao nosso site</b></h2><br>É com enorme prazer que registamos a sua presença no nosso site, esperamos que encontre tudo o que precisa para realizar os seus projectos com sucesso!.<br><br>A LAVRICARTAXO - Cooperativa Agro-Pecuária do Cartaxo, C.R.L.. coloca ao seu dispôr uma vasta equipa para que possa ter todo o apoio que considere necessário.<br><br>O nosso objectivo é servir os nossos clientes com competência e dedicação para que o nosso cliente volte sempre!<br><br>Ao adquirir produtos na nossa empresa deve saber que estará sempre a comprar qualidade ao melhor preço! Volte sempre, será sempre um gosto tê-lo de volta!</p>
+        <h2><b><br><br>As nossas marcas</b></h2></br>
+          <a href="" class="marcas">
+            <div>
+              <img src="Images/marcas/agrolex.png" >
             </div>
-          </div>
-        </div>
-      </footer>
+          </a>
+          <a href="" class="marcas">
+            <div>
+              <img src="Images/marcas/basf.png" >
+            </div>
+          </a>
+          <a href="" class="marcas">
+            <div>
+              <img src="Images/marcas/belchim.png" >
+            </div>
+          </a>
+          <a href="" class="marcas">
+            <div>
+              <img src="Images/marcas/biona.png">
+            </div>
+          </a>
+          <a href="" class="marcas">
+            <div>
+              <img src="Images/marcas/cadubal.png" >
+            </div>
+          </a>
+          <a href="" class="marcas">
+            <div>
+              <img src="Images/marcas/deiba.png" >
+            </div>
+          </a>
+          <a href="" class="marcas">
+            <div>
+              <img src="Images/marcas/einhell.png" >
+            </div>
+          </a>
+          <a href="" class="marcas">
+            <div>
+              <img src="Images/marcas/epagro.png" >
+            </div>
+          </a>
+          <a href="" class="marcas">
+            <div>
+              <img src="Images/marcas/fertiprado.png" >
+            </div>
+          </a>
+          <a href="" class="marcas">
+            <div>
+              <img src="Images/marcas/fito.png">
+            </div>
+          </a>
+          <a href="" class="marcas">
+            <div>
+              <img src="Images/marcas/iqv.png">
+            </div>
+          </a>
+          <a href="" class="marcas">
+            <div>
+              <img src="Images/marcas/lena.png">
+            </div>
+          </a>
+          <a href="" class="marcas">
+            <div>
+              <img src="Images/marcas/nutrofertil.png" >
+            </div>
+          </a>
+          <a href="" class="marcas">
+            <div>
+              <img src="Images/marcas/sirosubs.png" >
+            </div>
+          </a>
+      </div>
+    </div>
+  <footer class="footerBottom">
+    <div class="wheretofindusFooter">
+      <p>ONDE NOS ENCONTRAR<br><br>Rua Batalhoz nr.81 &nbsp; 2070-069 Cartaxo</p>
+    </div>
+    <div class="contactusFooter">
+      <p>CONTACTE-NOS<br><br>243 700 240<br>243 700 249</p>
+    </div>
+    <div class="openFooter">
+      <p>ABERTOS<br><br>De Segunda a Sexta-feira das 9H ás 13H e das 14:30H ás 18:30H</br>Aos Sábados das 9H ás 12:30H</p>
+    </div>
+      <br><br><br><br><br><br>
+      <p>Copyright &copy; 2021 Lavricartaxo-Cooperativa Agro-Pecuária do Cartaxo, C.R.L.</p>
+      <p>Desenvolvimento e Design:<a href="https://www.analogia.net/?opx=entrar">ANALOGIA.NET</a></p>
+  </footer>
 </body>
 </html>
