--- a/galeria.html
+++ b/galeria.html
@@ -41,7 +41,7 @@
   </nav>
   <div class="main">
     <div class="slideshowGaleria">
-      <img src="Images/Slideshowtestimg1.jpg" alt="testimg" id="slideshowIMG" onload="slideShow()" class="slideshowimgs">
+      <img src="Images/slideshow/1.jpg" id="slideshowIMG" onload="setTimeout(slideShow(),3000)" class="slideshowimgs">
     </div>
   </div>
   <footer class="footerBottom">
