--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <!--bootstrap-->
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-      
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script> 
       <link rel="icon" type="image/jpg" href="Images/icon.png" />
       <link rel="stylesheet" href="CSS/style.css" type="text/css">
       <script src="JS/script.js"></script>
@@ -30,13 +29,13 @@
   </div>
   <nav>
     <ul class="navMenu">
-      <li class="menuText"><a href="index.html" >INICIO</a></li>
-      <li class="menuText"><a href="quemsomos.html">QUEM SOMOS</a></li>
-      <li class="menuText"><a href="galeria.html">GALERIA</a></li>
-      <li class="menuText"><a href="produtos.html" >PRODUTOS</a></li>
-      <li class="menuText"><a href="contatos.html" >CONTATOS</a></li>
-      <li class="menuText"><a href="marcas.html" >MARCAS</a></li>
-      <li class="menuText"><a href="associados.html" >ASSOCIADOS</a></li>   
+      <a href="index.html"><li class="menuText">INICIO</li></a>
+      <a href="quemsomos.html"><li class="menuText">QUEM SOMOS</li></a>
+      <a href="galeria.html"><li class="menuText">GALERIA</li></a>
+      <a href="produtos.html"><li class="menuText">PRODUTOS</li></a>
+      <a href="contatos.html"><li class="menuText">CONTATOS</li></a>
+      <a href="marcas.html"><li class="menuText">MARCAS</li></a>
+      <a href="associados.html"><li class="menuText">ASSOCIADOS</li></a>
     </ul>
   </nav>
   <div class="main">
@@ -49,78 +48,80 @@
     <div class="welcome">
       <p><br><h2><b>Seja bem vindo ao nosso site</b></h2><br>É com enorme prazer que registamos a sua presença no nosso site, esperamos que encontre tudo o que precisa para realizar os seus projectos com sucesso!.<br><br>A LAVRICARTAXO - Cooperativa Agro-Pecuária do Cartaxo, C.R.L.. coloca ao seu dispôr uma vasta equipa para que possa ter todo o apoio que considere necessário.<br><br>O nosso objectivo é servir os nossos clientes com competência e dedicação para que o nosso cliente volte sempre!<br><br>Ao adquirir produtos na nossa empresa deve saber que estará sempre a comprar qualidade ao melhor preço! Volte sempre, será sempre um gosto tê-lo de volta!</p>
         <h2><b><br><br>As nossas marcas</b></h2></br>
-          <a href="" class="marcas">
-            <div>
+        <div class="marcas">
+          <a href="" >
+            <div class="marca">
               <img src="Images/marcas/agrolex.png" >
             </div>
           </a>
-          <a href="" class="marcas">
-            <div>
-              <img src="Images/marcas/basf.png" >
-            </div>
-          </a>
-          <a href="" class="marcas">
-            <div>
-              <img src="Images/marcas/belchim.png" >
-            </div>
-          </a>
-          <a href="" class="marcas">
-            <div>
-              <img src="Images/marcas/biona.png">
-            </div>
-          </a>
-          <a href="" class="marcas">
-            <div>
-              <img src="Images/marcas/cadubal.png" >
-            </div>
-          </a>
-          <a href="" class="marcas">
-            <div>
-              <img src="Images/marcas/deiba.png" >
-            </div>
-          </a>
-          <a href="" class="marcas">
-            <div>
-              <img src="Images/marcas/einhell.png" >
-            </div>
-          </a>
-          <a href="" class="marcas">
-            <div>
-              <img src="Images/marcas/epagro.png" >
-            </div>
-          </a>
-          <a href="" class="marcas">
-            <div>
-              <img src="Images/marcas/fertiprado.png" >
-            </div>
-          </a>
-          <a href="" class="marcas">
-            <div>
-              <img src="Images/marcas/fito.png">
-            </div>
-          </a>
-          <a href="" class="marcas">
-            <div>
-              <img src="Images/marcas/iqv.png">
-            </div>
-          </a>
-          <a href="" class="marcas">
-            <div>
-              <img src="Images/marcas/lena.png">
-            </div>
-          </a>
-          <a href="" class="marcas">
-            <div>
-              <img src="Images/marcas/nutrofertil.png" >
-            </div>
-          </a>
-          <a href="" class="marcas">
-            <div>
+          <a href="">
+            <div class="marca">
               <img src="Images/marcas/sirosubs.png" >
             </div>
           </a>
+          <a href="">
+            <div class="marca">
+              <img src="Images/marcas/belchim.png" >
+            </div>
+          </a>
+          <a href="">
+            <div class="marca">
+              <img src="Images/marcas/nutrofertil.png" >
+            </div>
+          </a>
+        </div>
+        <div class="marcas">
+          <a href="">
+            <div class="marca">
+              <img src="Images/marcas/biona.png">
+            </div>
+          </a>
+          <a href="">
+            <div class="marca">
+              <img src="Images/marcas/cadubal.png" >
+            </div>
+          </a>
+          <a href="">
+            <div class="marca">
+              <img src="Images/marcas/deiba.png" >
+            </div>
+          </a>
+          <a href="">
+            <div class="marca">
+              <img src="Images/marcas/lena.png">
+            </div>
+          </a>
+        </div>
+        <div class="marcas">
+          <a href="">
+            <div class="marca">
+              <img src="Images/marcas/einhell.png" >
+            </div>
+          </a>
+          <a href="">
+            <div class="marca">
+              <img src="Images/marcas/epagro.png" >
+            </div>
+          </a>
+          <a href="">
+            <div class="marca">
+              <img src="Images/marcas/fertiprado.png" >
+            </div>
+          </a>
+          <a href="">
+            <div class="marca">
+              <img src="Images/marcas/fito.png">
+            </div>
+          </a>
+          <a href="">
+            <div class="marca">
+              <img src="Images/marcas/iqv.png">
+            </div>
+          </a>
+        </div>
       </div>
-    </div>
+    </div> <!--/Main-->
+    <br>
   <footer class="footerBottom">
     <div class="wheretofindusFooter">
       <p>ONDE NOS ENCONTRAR<br><br>Rua Batalhoz nr.81 &nbsp; 2070-069 Cartaxo</p>
