--- a/galeria.html
+++ b/galeria.html
@@ -6,10 +6,6 @@
     <meta name="description" content="LAVRICARTAXO Cooperativa agricola do Cartaxo, Vinhas, Vinhos, adubos, agroquimicos, fitofarmacos, sementes, batatas, rações">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--bootstrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-    
     <link rel="icon" type="image/jpg" href="Images/icon.png" />
     <link rel="stylesheet" href="CSS/style.css" type="text/css">
     <script src="JS/script.js"></script>
@@ -40,12 +36,12 @@
     </ul>
   </nav>
   <div class="main">
-    <div class="slideshowGaleria">
+    <!-- <div class="slideshowGaleria">
       <img src="Images/slideshow/1.jpg" id="slideshowIMG" onload="setTimeout(slideShow(),3000)" class="slideshowimgs">
-    </div>
+    </div> -->
     <div class="galery">
       <div class="photo">
-        <img src="">
+        <img src=""><!--IMG placeholder-->
       </div>
       <div class="photo">
         <img src="">
@@ -70,15 +66,6 @@
       </div>
       <div class="photo">
         <img src="">
-      </div>
-      <div class="photo">
-        <img src="">
-      </div>
-      <div class="photo">
-        <img src="">
-      </div>
-      <div class="photo">
-
       </div>
     </div>
   </div>
