--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
         <div id="weatherWidget" >
           <script type="text/javascript" async src="JS/weatherWidget.js"></script>
         </div> 
-      </div>               
+      </div>  
+      <div class="weatherWidgetTablet">
+        <div id="weatherWidgetTablet">
+          <script type="text/javascript" async src="JS/weatherWidgetTablet.js"></script>
+        </div>
+      </div>             
     </div>    
   </div>
   <nav>
