--- a/contatos.html
+++ b/contatos.html
@@ -26,7 +26,12 @@
             <div id="weatherWidget" >
               <script type="text/javascript" async src="JS/weatherWidget.js"></script>
             </div> 
-          </div>               
+          </div>
+          <div class="weatherWidgetTablet">
+            <div id="weatherWidgetTablet">
+              <script type="text/javascript" async src="JS/weatherWidgetTablet.js"></script>
+            </div>
+          </div>              
         </div>    
       </div>
       <nav>
@@ -123,7 +128,7 @@
     </div>
 <footer class="footerBottom">
     <div class="wheretofindusFooter">
-      <p>ONDE NOS ENCONTRAR<br><br>Rua Batalhoz nr.81 &nbsp; 2070-069 Cartaxo</p>
+      <p>ONDE NOS ENCONTRAR<br><br>Rua Batalhoz nr.81<br>2070-069 Cartaxo</p>
     </div>
     <div class="contactusFooter">
       <p>CONTACTE-NOS<br><br>243 700 240<br>243 700 249</p>
