--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <script src="JS/script.js"></script>
       <title>Lavricartaxo</title>
   </head>
-<body>
+<body onload="fuck()">
   <div class="header">
     <div class="top">
       <div class="logo">
@@ -31,7 +31,7 @@
   </div>
   <nav>
     <ul class="navMenu">
-      <a href="index.html"><li class="menuText">INICIO</li></a>
+      <a href="index.html"><li class="menuText" id="start">INICIO</li></a>
       <a href="quemsomos.html"><li class="menuText">QUEM SOMOS</li></a>
       <a href="galeria.html"><li class="menuText">GALERIA</li></a>
       <a href="produtos.html"><li class="menuText">PRODUTOS</li></a>
@@ -49,84 +49,170 @@
     </div>
     <div class="welcome">
       <p><br><h2><b>Seja bem vindo ao nosso site</b></h2><br>É com enorme prazer que registamos a sua presença no nosso site, esperamos que encontre tudo o que precisa para realizar os seus projectos com sucesso!.<br><br>A LAVRICARTAXO - Cooperativa Agro-Pecuária do Cartaxo, C.R.L.. coloca ao seu dispôr uma vasta equipa para que possa ter todo o apoio que considere necessário.<br><br>O nosso objectivo é servir os nossos clientes com competência e dedicação para que o nosso cliente volte sempre!<br><br>Ao adquirir produtos na nossa empresa deve saber que estará sempre a comprar qualidade ao melhor preço! Volte sempre, será sempre um gosto tê-lo de volta!</p>
-        <h2><b><br><br>As nossas marcas</b></h2></br>
-        <div class="marcas">
-          <a href="" >
-            <div class="marca">
-              <img src="Images/marcas/agrolex.png" >
-            </div>
-          </a>
-          <a href="">
-            <div class="marca">
-              <img src="Images/marcas/sirosubs.png" >
-            </div>
-          </a>
-          <a href="">
-            <div class="marca">
-              <img src="Images/marcas/belchim.png" >
-            </div>
-          </a>
-          <a href="">
-            <div class="marca">
-              <img src="Images/marcas/nutrofertil.png" >
-            </div>
-          </a>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+      <h2><b><br><br>As nossas marcas</b></h2></br>       
+    </div>
+    <div class="marcas">
+      <a href="" >
+        <div class="marca">
+          <img src="Images/marcas/agrolex.png" >
         </div>
-        <div class="marcas">
-          <a href="">
-            <div class="marca">
-              <img src="Images/marcas/biona.png">
-            </div>
-          </a>
-          <a href="">
-            <div class="marca">
-              <img src="Images/marcas/cadubal.png" >
-            </div>
-          </a>
-          <a href="">
-            <div class="marca">
-              <img src="Images/marcas/deiba.png" >
-            </div>
-          </a>
-          <a href="">
-            <div class="marca">
-              <img src="Images/marcas/lena.png">
-            </div>
-          </a>
+      </a>
+      <a href="">
+        <div class="marca">
+          <img src="Images/marcas/sirosubs.png" >
         </div>
-        <div class="marcas">
-          <a href="">
-            <div class="marca">
-              <img src="Images/marcas/einhell.png" >
-            </div>
-          </a>
-          <a href="">
-            <div class="marca">
-              <img src="Images/marcas/epagro.png" >
-            </div>
-          </a>
-          <a href="">
-            <div class="marca">
-              <img src="Images/marcas/fertiprado.png" >
-            </div>
-          </a>
-          <a href="">
-            <div class="marca">
-              <img src="Images/marcas/fito.png">
-            </div>
-          </a>
-          <a href="">
-            <div class="marca">
-              <img src="Images/marcas/iqv.png">
-            </div>
-          </a>
+      </a>
+      <a href="">
+        <div class="marca">
+          <img src="Images/marcas/belchim.png" >
         </div>
-      </div>
-    </div> <!--/Main-->
+      </a>
+      <a href="">
+        <div class="marca">
+          <img src="Images/marcas/nutrofertil.png" >
+        </div>
+      </a>
+    </div>
+    <div class="marcas">
+      <a href="">
+        <div class="marca">
+          <img src="Images/marcas/biona.png">
+        </div>
+      </a>
+      <a href="">
+        <div class="marca">
+          <img src="Images/marcas/cadubal.png" >
+        </div>
+      </a>
+      <a href="">
+        <div class="marca">
+          <img src="Images/marcas/deiba.png" >
+        </div>
+      </a>
+      <a href="">
+        <div class="marca">
+          <img src="Images/marcas/lena.png">
+        </div>
+      </a>
+    </div>
+    <div class="marcas">
+      <a href="">
+        <div class="marca">
+          <img src="Images/marcas/einhell.png" >
+        </div>
+      </a>
+      <a href="">
+        <div class="marca">
+          <img src="Images/marcas/epagro.png" >
+        </div>
+      </a>
+      <a href="">
+        <div class="marca">
+          <img src="Images/marcas/fertiprado.png" >
+        </div>
+      </a>
+      <a href="">
+        <div class="marca">
+          <img src="Images/marcas/fito.png">
+        </div>
+      </a>
+      <a href="">
+        <div class="marca">
+          <img src="Images/marcas/iqv.png">
+        </div>
+      </a>
+    </div>
+
+    <!------------------Tablet Marcas------------------>
+
+    <div class="marcasTablet">
+      <a href="" >
+        <div class="marcaTablet">
+          <img src="Images/marcas/agrolex.png" >
+        </div>
+      </a>
+      <a href="">
+        <div class="marcaTablet">
+          <img src="Images/marcas/sirosubs.png" >
+        </div>
+      </a>
+      <a href="">
+        <div class="marcaTablet">
+          <img src="Images/marcas/belchim.png" >
+        </div>
+      </a>   
+    </div>
+    <div class="marcasTablet">
+      <a href="">
+        <div class="marcaTablet">
+          <img src="Images/marcas/nutrofertil.png" >
+        </div>
+      </a>
+      <a href="">
+        <div class="marcaTablet">
+          <img src="Images/marcas/biona.png">
+        </div>
+      </a>
+      <a href="">
+        <div class="marcaTablet">
+          <img src="Images/marcas/cadubal.png" >
+        </div>
+      </a>
+    </div>
+    <div class="marcasTablet">
+      <a href="">
+        <div class="marcaTablet">
+          <img src="Images/marcas/deiba.png" >
+        </div>
+      </a>
+      <a href="">
+        <div class="marcaTablet">
+          <img src="Images/marcas/lena.png">
+        </div>
+      </a>
+      <a href="">
+        <div class="marcaTablet">
+          <img src="Images/marcas/einhell.png" >
+        </div>
+      </a> 
+    </div>
+    <div class="marcasTablet">
+      <a href="">
+        <div class="marcaTablet">
+          <img src="Images/marcas/epagro.png" >
+        </div>
+      </a>
+      <a href="">
+        <div class="marcaTablet">
+          <img src="Images/marcas/fertiprado.png" >
+        </div>
+      </a>
+      <a href="">
+        <div class="marcaTablet">
+          <img src="Images/marcas/fito.png">
+        </div>
+      </a>  
+    </div>
+    <div class="marcasTablet">
+      <a href="">
+        <div class="marcaTablet">
+          <img src="Images/marcas/iqv.png">
+        </div>
+      </a>
+    </div>
+  </div><!--/Main-->
     <br>
   <footer class="footerBottom">
     <div class="wheretofindusFooter">
-      <p>ONDE NOS ENCONTRAR<br><br>Rua Batalhoz nr.81 &nbsp; 2070-069 Cartaxo</p>
+      <p>ONDE NOS ENCONTRAR<br><br>Rua Batalhoz nr.81<br>2070-069 Cartaxo</p>
     </div>
     <div class="contactusFooter">
       <p>CONTACTE-NOS<br><br>243 700 240<br>243 700 249</p>
