--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <script src="JS/script.js"></script>
       <title>Lavricartaxo</title>
   </head>
-<body onload="fuck()">
+<body onload="inicialStart()">
   <div class="header">
     <div class="top">
       <div class="logo">
