--- a/marcas.html
+++ b/marcas.html
@@ -112,7 +112,83 @@
         </div>
       </a>
     </div>
-  </div>
+    <!--Marcas Tablet Marcas-->
+    <div class="marcasTabletI">
+      <a href="" >
+        <div class="marcaTabletI">
+          <img src="Images/marcas/agrolex.png" >
+        </div>
+      </a>
+      <a href="">
+        <div class="marcaTabletI">
+          <img src="Images/marcas/sirosubs.png" >
+        </div>
+      </a>
+      <a href="">
+        <div class="marcaTabletI">
+          <img src="Images/marcas/belchim.png" >
+        </div>
+      </a>   
+    </div>
+    <div class="marcasTabletI">
+      <a href="">
+        <div class="marcaTabletI">
+          <img src="Images/marcas/nutrofertil.png" >
+        </div>
+      </a>
+      <a href="">
+        <div class="marcaTabletI">
+          <img src="Images/marcas/biona.png">
+        </div>
+      </a>
+      <a href="">
+        <div class="marcaTabletI">
+          <img src="Images/marcas/cadubal.png" >
+        </div>
+      </a>
+    </div>
+    <div class="marcasTabletI">
+      <a href="">
+        <div class="marcaTabletI">
+          <img src="Images/marcas/deiba.png" >
+        </div>
+      </a>
+      <a href="">
+        <div class="marcaTabletI">
+          <img src="Images/marcas/lena.png">
+        </div>
+      </a>
+      <a href="">
+        <div class="marcaTabletI">
+          <img src="Images/marcas/einhell.png" >
+        </div>
+      </a> 
+    </div>
+    <div class="marcasTabletI">
+      <a href="">
+        <div class="marcaTabletI">
+          <img src="Images/marcas/epagro.png" >
+        </div>
+      </a>
+      <a href="">
+        <div class="marcaTabletI">
+          <img src="Images/marcas/fertiprado.png" >
+        </div>
+      </a>
+      <a href="">
+        <div class="marcaTabletI">
+          <img src="Images/marcas/fito.png">
+        </div>
+      </a>  
+    </div>
+    <div class="marcasTabletI">
+      <a href="">
+        <div class="marcaTabletI">
+          <img src="Images/marcas/iqv.png">
+        </div>
+      </a>
+    </div>
+  </div> <!--/Main-->
   </div>
   <footer class="footerBottom">
     <div class="wheretofindusFooter">
