--- a/associados.html
+++ b/associados.html
@@ -69,7 +69,7 @@
     <br>
   <footer class="footerBottom">
     <div class="wheretofindusFooter">
-      <p>ONDE NOS ENCONTRAR<br><br>Rua Batalhoz nr.81<br>>2070-069 Cartaxo</p>
+      <p>ONDE NOS ENCONTRAR<br><br>Rua Batalhoz nr.81<br>2070-069 Cartaxo</p>
     </div>
     <div class="contactusFooter">
       <p>CONTACTE-NOS<br><br>243 700 240<br>243 700 249</p>
