--- a/marcas.html
+++ b/marcas.html
@@ -40,155 +40,157 @@
       <a href="associados.html"><li class="menuText">ASSOCIADOS</li></a>
     </ul>
   </nav>
-  <div class="main">
-    <div class="marcasI">
-      <a href="" >
-        <div class="marcaI">
-          <img src="Images/marcas/agrolex.png" >
-        </div>
-      </a>
-      <a href="">
-        <div class="marcaI">
-          <img src="Images/marcas/sirosubs.png" >
-        </div>
-      </a>
-      <a href="">
-        <div class="marcaI">
-          <img src="Images/marcas/belchim.png" >
-        </div>
-      </a>
-      <a href="">
-        <div class="marcaI">
-          <img src="Images/marcas/nutrofertil.png" >
-        </div>
-      </a>
-    </div>
-    <div class="marcasI">
-      <a href="">
-        <div class="marcaI">
-          <img src="Images/marcas/biona.png">
-        </div>
-      </a>
-      <a href="">
-        <div class="marcaI">
-          <img src="Images/marcas/cadubal.png" >
-        </div>
-      </a>
-      <a href="">
-        <div class="marca">
-          <img src="Images/marcas/deiba.png" >
-        </div>
-      </a>
-      <a href="">
-        <div class="marcaI">
-          <img src="Images/marcas/lena.png">
-        </div>
-      </a>
-    </div>
-    <div class="marcasI">
-      <a href="">
-        <div class="marcaI">
-          <img src="Images/marcas/einhell.png" >
-        </div>
-      </a>
-      <a href="">
-        <div class="marcaI">
-          <img src="Images/marcas/epagro.png" >
-        </div>
-      </a>
-      <a href="">
-        <div class="marcaI">
-          <img src="Images/marcas/fertiprado.png" >
-        </div>
-      </a>
-      <a href="">
-        <div class="marcaI">
-          <img src="Images/marcas/fito.png">
-        </div>
-      </a>
-      <a href="">
-        <div class="marcaI">
-          <img src="Images/marcas/iqv.png">
-        </div>
-      </a>
-    </div>
-    <!--Marcas Tablet Marcas-->
-    <div class="marcasTabletI">
-      <a href="" >
-        <div class="marcaTabletI">
-          <img src="Images/marcas/agrolex.png" >
-        </div>
-      </a>
-      <a href="">
-        <div class="marcaTabletI">
-          <img src="Images/marcas/sirosubs.png" >
-        </div>
-      </a>
-      <a href="">
-        <div class="marcaTabletI">
-          <img src="Images/marcas/belchim.png" >
-        </div>
-      </a>   
-    </div>
-    <div class="marcasTabletI">
-      <a href="">
-        <div class="marcaTabletI">
-          <img src="Images/marcas/nutrofertil.png" >
-        </div>
-      </a>
-      <a href="">
-        <div class="marcaTabletI">
-          <img src="Images/marcas/biona.png">
-        </div>
-      </a>
-      <a href="">
-        <div class="marcaTabletI">
-          <img src="Images/marcas/cadubal.png" >
-        </div>
-      </a>
-    </div>
-    <div class="marcasTabletI">
-      <a href="">
-        <div class="marcaTabletI">
-          <img src="Images/marcas/deiba.png" >
-        </div>
-      </a>
-      <a href="">
-        <div class="marcaTabletI">
-          <img src="Images/marcas/lena.png">
-        </div>
-      </a>
-      <a href="">
-        <div class="marcaTabletI">
-          <img src="Images/marcas/einhell.png" >
-        </div>
-      </a> 
-    </div>
-    <div class="marcasTabletI">
-      <a href="">
-        <div class="marcaTabletI">
-          <img src="Images/marcas/epagro.png" >
-        </div>
-      </a>
-      <a href="">
-        <div class="marcaTabletI">
-          <img src="Images/marcas/fertiprado.png" >
-        </div>
-      </a>
-      <a href="">
-        <div class="marcaTabletI">
-          <img src="Images/marcas/fito.png">
-        </div>
-      </a>  
-    </div>
-    <div class="marcasTabletI">
-      <a href="">
-        <div class="marcaTabletI">
-          <img src="Images/marcas/iqv.png">
-        </div>
-      </a>
-    </div>
-  </div> <!--/Main-->
+  <div class="welcome">
+    <h2><b>As nossas marcas</b></h2>       
+  </div>
+  <div class="marcas">
+    <a href="" >
+      <div class="marca">
+        <img src="Images/marcas/agrolex.png" >
+      </div>
+    </a>
+    <a href="">
+      <div class="marca">
+        <img src="Images/marcas/sirosubs.png" >
+      </div>
+    </a>
+    <a href="">
+      <div class="marca">
+        <img src="Images/marcas/belchim.png" >
+      </div>
+    </a>
+    <a href="">
+      <div class="marca">
+        <img src="Images/marcas/nutrofertil.png" >
+      </div>
+    </a>
+  </div>
+  <div class="marcas">
+    <a href="">
+      <div class="marca">
+        <img src="Images/marcas/biona.png">
+      </div>
+    </a>
+    <a href="">
+      <div class="marca">
+        <img src="Images/marcas/cadubal.png" >
+      </div>
+    </a>
+    <a href="">
+      <div class="marca">
+        <img src="Images/marcas/deiba.png" >
+      </div>
+    </a>
+    <a href="">
+      <div class="marca">
+        <img src="Images/marcas/lena.png">
+      </div>
+    </a>
+  </div>
+  <div class="marcas">
+    <a href="">
+      <div class="marca">
+        <img src="Images/marcas/einhell.png" >
+      </div>
+    </a>
+    <a href="">
+      <div class="marca">
+        <img src="Images/marcas/epagro.png" >
+      </div>
+    </a>
+    <a href="">
+      <div class="marca">
+        <img src="Images/marcas/fertiprado.png" >
+      </div>
+    </a>
+    <a href="">
+      <div class="marca">
+        <img src="Images/marcas/fito.png">
+      </div>
+    </a>
+    <a href="">
+      <div class="marca">
+        <img src="Images/marcas/iqv.png">
+      </div>
+    </a>
+  </div>
+
+  <!------------------Tablet Marcas------------------>
+
+  <div class="marcasTablet">
+    <a href="" >
+      <div class="marcaTablet">
+        <img src="Images/marcas/agrolex.png" >
+      </div>
+    </a>
+    <a href="">
+      <div class="marcaTablet">
+        <img src="Images/marcas/sirosubs.png" >
+      </div>
+    </a>
+    <a href="">
+      <div class="marcaTablet">
+        <img src="Images/marcas/belchim.png" >
+      </div>
+    </a>   
+  </div>
+  <div class="marcasTablet">
+    <a href="">
+      <div class="marcaTablet">
+        <img src="Images/marcas/nutrofertil.png" >
+      </div>
+    </a>
+    <a href="">
+      <div class="marcaTablet">
+        <img src="Images/marcas/biona.png">
+      </div>
+    </a>
+    <a href="">
+      <div class="marcaTablet">
+        <img src="Images/marcas/cadubal.png" >
+      </div>
+    </a>
+  </div>
+  <div class="marcasTablet">
+    <a href="">
+      <div class="marcaTablet">
+        <img src="Images/marcas/deiba.png" >
+      </div>
+    </a>
+    <a href="">
+      <div class="marcaTablet">
+        <img src="Images/marcas/lena.png">
+      </div>
+    </a>
+    <a href="">
+      <div class="marcaTablet">
+        <img src="Images/marcas/einhell.png" >
+      </div>
+    </a> 
+  </div>
+  <div class="marcasTablet">
+    <a href="">
+      <div class="marcaTablet">
+        <img src="Images/marcas/epagro.png" >
+      </div>
+    </a>
+    <a href="">
+      <div class="marcaTablet">
+        <img src="Images/marcas/fertiprado.png" >
+      </div>
+    </a>
+    <a href="">
+      <div class="marcaTablet">
+        <img src="Images/marcas/fito.png">
+      </div>
+    </a>  
+  </div>
+  <div class="marcasTablet">
+    <a href="">
+      <div class="marcaTablet">
+        <img src="Images/marcas/iqv.png">
+      </div>
+    </a>
   </div>
   <footer class="footerBottom">
     <div class="wheretofindusFooter">
