--- a/produtos.html
+++ b/produtos.html
@@ -1,47 +1,63 @@
 <!DOCTYPE html>
 <html lang="pt-pt">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="keywords" content="Cooperativa agricola do Cartaxo, Vinhas, Vinhos, adubos, agroquimicos, fitofarmacos, sementes, batatas, rações">
-    <meta name="description" content="LAVRICARTAXO Cooperativa agricola do Cartaxo, Vinhas, Vinhos, adubos, agroquimicos, fitofarmacos, sementes, batatas, rações">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/jpg" href="Images/icon.png" />
-    <link rel="stylesheet" href="CSS/style.css" type="text/css">
-    <script src="JS/script.js"></script>
-    <title>Lavricartaxo</title>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="keywords" content="Cooperativa agricola do Cartaxo, Vinhas, Vinhos, adubos, agroquimicos, fitofarmacos, sementes, batatas, rações">
+  <meta name="description" content="LAVRICARTAXO Cooperativa agricola do Cartaxo, Vinhas, Vinhos, adubos, agroquimicos, fitofarmacos, sementes, batatas, rações">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/jpg" href="Images/icon.png" />
+  <link rel="stylesheet" href="CSS/style.css" type="text/css">
+  <script src="JS/script.js"></script>
+  <title>Lavricartaxo</title>
 </head>
+  
 <body>
   <div class="header">
     <div class="top">
       <div class="logo">
-        <a href="index.html"><img src="Images/logo.png" alt="logo" class="logoIMG"></a> 
+        <a href="index.html"><img src="Images/logo.png" alt="logo" class="logoIMG"></a>
       </div>
       <div class="weatherWidget">
-        <div id="weatherWidget" >
+        <div id="weatherWidget">
           <script type="text/javascript" async src="JS/weatherWidget.js"></script>
-        </div> 
+        </div>
       </div>
       <div class="weatherWidgetTablet">
         <div id="weatherWidgetTablet">
           <script type="text/javascript" async src="JS/weatherWidgetTablet.js"></script>
         </div>
-      </div>               
-    </div>    
+      </div>
+    </div>
   </div>
   <nav>
     <ul class="navMenu">
-      <a href="index.html"><li class="menuText">INICIO</li></a>
-      <a href="quemsomos.html"><li class="menuText">QUEM SOMOS</li></a>
-      <a href="galeria.html"><li class="menuText">GALERIA</li></a>
-      <a href="produtos.html"><li class="menuText">PRODUTOS</li></a>
-      <a href="contatos.html"><li class="menuText">CONTATOS</li></a>
-      <a href="marcas.html"><li class="menuText">MARCAS</li></a>
-      <a href="associados.html"><li class="menuText">ASSOCIADOS</li></a>
+      <a href="index.html">
+        <li class="menuText">INICIO</li>
+      </a>
+      <a href="quemsomos.html">
+        <li class="menuText">QUEM SOMOS</li>
+      </a>
+      <a href="galeria.html">
+        <li class="menuText">GALERIA</li>
+      </a>
+      <a href="produtos.html">
+        <li class="menuText">PRODUTOS</li>
+      </a>
+      <a href="contatos.html">
+        <li class="menuText">CONTATOS</li>
+      </a>
+      <a href="marcas.html">
+        <li class="menuText">MARCAS</li>
+      </a>
+      <a href="associados.html">
+        <li class="menuText">ASSOCIADOS</li>
+      </a>
     </ul>
   </nav>
   <div class="main">
-   
+
   </div>
   <br>
   <br>
@@ -89,9 +105,10 @@
     <div class="openFooter">
       <p>ABERTOS<br><br>De Segunda a Sexta-feira das 9H ás 13H e das 14:30H ás 18:30H</br>Aos Sábados das 9H ás 12:30H</p>
     </div>
-      <br><br><br><br><br><br>
-      <p>Copyright &copy; 2021 Lavricartaxo-Cooperativa Agro-Pecuária do Cartaxo, C.R.L.</p>
-      <p>Desenvolvimento e Design:<a href="https://www.analogia.net/?opx=entrar">ANALOGIA.NET</a></p>
+    <br><br><br><br><br><br>
+    <p>Copyright &copy; 2021 Lavricartaxo-Cooperativa Agro-Pecuária do Cartaxo, C.R.L.</p>
+    <p>Desenvolvimento e Design:<a href="https://www.analogia.net/?opx=entrar">ANALOGIA.NET</a></p>
   </footer>
 </body>
+
 </html>
