--- a/index.html
+++ b/index.html
@@ -12,31 +12,31 @@
       <title>Lavricartaxo</title>
   </head>
 <body onload="inicialStart()">
-  <div class="header">
-    <div class="top">
-      <div class="logo">
-        <a href="index.html"><img src="Images/logo.png" alt="logo" class="logoIMG"></a> 
+  <div class="header"> <!--Header-->
+    <div class="top"> <!--Header Subsection Top-->
+      <div class="logo"> <!--Div logo-->
+        <a href="index.html"><img src="Images/logo.png" alt="logo" class="logoIMG"></a> <!--Logo Lavricartaxo-->
       </div>
-      <div class="weatherWidget">
+      <div class="weatherWidget"> <!--Div weather widget PC-->
         <div id="weatherWidget" >
-          <script type="text/javascript" async src="JS/weatherWidget.js"></script>
+          <script type="text/javascript" async src="JS/weatherWidget.js"></script> <!--Weather width PC-->
         </div> 
       </div>  
-      <div class="weatherWidgetTablet">
+      <div class="weatherWidgetTablet"> <!--Div weather widget Tablet-->
         <div id="weatherWidgetTablet">
-          <script type="text/javascript" async src="JS/weatherWidgetTablet.js"></script>
+          <script type="text/javascript" async src="JS/weatherWidgetTablet.js"></script> <!--Weather width Tablet-->
         </div>
       </div>   
-      <div class="weatherWidgetPhone">
+      <div class="weatherWidgetPhone"> <!--Div weather widget Phone-->
         <div id="weatherWidgetPhone">
-          <script type="text/javascript" async src="JS/weatherWidgetPhone.js"></script>
+          <script type="text/javascript" async src="JS/weatherWidgetPhone.js"></script> <!--Weather width Phone-->
         </div>
       </div>          
     </div>    
   </div>
   <nav>
-    <i class="fas fa-chevron-right"></i>
-    <ul class="navMenu">
+    <i class="fas fa-chevron-right"></i> <!--Sidebutton Phone Mode-->
+    <ul class="navMenu"> <!--Menu-->
       <a href="index.html"><li class="menuText" id="start">INICIO</li></a>
       <a href="quemsomos.html"><li class="menuText">QUEM SOMOS</li></a>
       <a href="galeria.html"><li class="menuText">GALERIA</li></a>
@@ -46,17 +46,20 @@
       <a href="associados.html"><li class="menuText">ASSOCIADOS</li></a>
     </ul>
   </nav>
-  <div class="main">
-    <div class="news">
-      <script type="text/javascript" src="JS/newsWidget.js?widgettitle=Noticías&amp;categories=126,127,128,129,&amp;showRelease=1&amp;width=300px&amp;headlinebold=1&amp;headlinesonly=0&amp;headlinecolor=2d57a1&amp;briefcolor=666666&amp;textcolor=333333&amp;typeface=arial&amp;fontsize=11&amp;width=300px&amp;headlinesepstyle=dotted&amp;showimages=1&amp;numstories=5&amp;bgcolor=ffffff&amp;urldest=247pr "></script>
+  <div class="main"> <!--"Body"/Main/Content-->
+    <div class="news"> <!--Div news widget-->
+      <script type="text/javascript" src="JS/newsWidget.js?widgettitle=Noticías&amp;categories=126,127,128,129,&amp;showRelease=1&amp;width=300px&amp;headlinebold=1&amp;headlinesonly=0&amp;headlinecolor=2d57a1&amp;briefcolor=666666&amp;textcolor=333333&amp;typeface=arial&amp;fontsize=11&amp;width=300px&amp;headlinesepstyle=dotted&amp;showimages=1&amp;numstories=5&amp;bgcolor=ffffff&amp;urldest=247pr "></script> <!--News widget-->
     </div>
-    <div class="slideshow">
-      <img src="Images/slideshow/1.jpg" id="slideshowIMG" onload="setTimeout(slideShow(),3000)" class="slideshowimgs">
+    <div class="slideshow"> <!--Div slideshow-->
+      <img src="Images/slideshow/1.jpg" id="slideshowIMG" onload="setTimeout(slideShow(),3000)" class="slideshowimgs"> <!--Slideshow-->
     </div>
-    <div class="welcome">
+    <div class="welcome"> <!--Text-->
       <p><br><h2><b>Seja bem vindo ao nosso site</b></h2><br>É com enorme prazer que registamos a sua presença no nosso site, esperamos que encontre tudo o que precisa para realizar os seus projectos com sucesso!.<br><br>A LAVRICARTAXO - Cooperativa Agro-Pecuária do Cartaxo, C.R.L.. coloca ao seu dispôr uma vasta equipa para que possa ter todo o apoio que considere necessário.<br><br>O nosso objectivo é servir os nossos clientes com competência e dedicação para que o nosso cliente volte sempre!<br><br>Ao adquirir produtos na nossa empresa deve saber que estará sempre a comprar qualidade ao melhor preço! Volte sempre, será sempre um gosto tê-lo de volta!</p>
       <h2><b><br><br>As nossas marcas</b></h2>       
     </div>
+    <!--Brands-->
+    <!--PC Marcas-->
+
     <div class="marcas">
       <a href="" >
         <div class="marca">
@@ -206,9 +209,91 @@
         </div>
       </a>
     </div>
+
+    <!------------------Phone Marcas------------------>
+
+    <div class="marcasPhone">
+      <a href="" >
+        <div class="marcaPhone">
+          <img src="Images/marcas/agrolex.png" >
+        </div>
+      </a>
+      <a href="">
+        <div class="marcaPhone">
+          <img src="Images/marcas/sirosubs.png" >
+        </div>
+      </a>   
+    </div>
+    <div class="marcasPhone">
+      <a href="">
+        <div class="marcaPhone">
+          <img src="Images/marcas/belchim.png" >
+        </div>
+      </a>  
+      <a href="">
+        <div class="marcaPhone">
+          <img src="Images/marcas/nutrofertil.png" >
+        </div>
+      </a>
+    </div>
+    <div class="marcasPhone">
+      <a href="">
+        <div class="marcaPhone">
+          <img src="Images/marcas/biona.png">
+        </div>
+      </a>
+      <a href="">
+        <div class="marcaPhone">
+          <img src="Images/marcas/cadubal.png" >
+        </div>
+      </a>
+    </div>
+    <div class="marcasPhone">
+      <a href="">
+        <div class="marcaPhone">
+          <img src="Images/marcas/deiba.png" >
+        </div>
+      </a>
+      <a href="">
+        <div class="marcaPhone">
+          <img src="Images/marcas/lena.png">
+        </div>
+      </a>
+    </div>
+    <div class="marcasPhone">
+      <a href="">
+        <div class="marcaPhone">
+          <img src="Images/marcas/einhell.png" >
+        </div>
+      </a> 
+      <a href="">
+        <div class="marcaPhone">
+          <img src="Images/marcas/epagro.png" >
+        </div>
+      </a>
+    </div>
+    <div class="marcasPhone">
+      <a href="">
+        <div class="marcaPhone">
+          <img src="Images/marcas/fertiprado.png" >
+        </div>
+      </a>
+      <a href="">
+        <div class="marcaPhone">
+          <img src="Images/marcas/fito.png">
+        </div>
+      </a>
+    </div>
+    <div class="marcasPhone">
+      <a href="">
+        <div class="marcaPhone">
+          <img src="Images/marcas/iqv.png">
+        </div>
+      </a>
+    </div>
   </div><!--/Main-->
     <br>
-  <footer class="footerBottom">
+  <footer class="footerBottom"> <!--Footer-->
     <div class="wheretofindusFooter">
       <p>ONDE NOS ENCONTRAR<br><br>Rua Batalhoz nr.81<br>2070-069 Cartaxo</p>
     </div>
