--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       <meta name="description" content="LAVRICARTAXO Cooperativa agricola do Cartaxo, Vinhas, Vinhos, adubos, agroquimicos, fitofarmacos, sementes, batatas, rações">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <script src="fontawesome"></script>
       <link rel="icon" type="image/jpg" href="Images/icon.png" />
       <link rel="stylesheet" href="CSS/style.css" type="text/css">
       <script src="JS/script.js"></script>
@@ -35,7 +36,8 @@
     </div>    
   </div>
   <nav>
-    <i class="fas fa-chevron-right"></i> <!--Sidebutton Phone Mode-->
+    <i class="fas fa-chevron-right sideBtnPhone"></i> <!--Sidebutton Phone Mode-->
+    <i class="fas fa-chevron-left sideBtnPhone"></i> <!--Sidebutton Phone Mode-->
     <ul class="navMenu"> <!--Menu-->
       <a href="index.html"><li class="menuText" id="start">INICIO</li></a>
       <a href="quemsomos.html"><li class="menuText">QUEM SOMOS</li></a>
@@ -57,6 +59,7 @@
       <p><br><h2><b>Seja bem vindo ao nosso site</b></h2><br>É com enorme prazer que registamos a sua presença no nosso site, esperamos que encontre tudo o que precisa para realizar os seus projectos com sucesso!.<br><br>A LAVRICARTAXO - Cooperativa Agro-Pecuária do Cartaxo, C.R.L.. coloca ao seu dispôr uma vasta equipa para que possa ter todo o apoio que considere necessário.<br><br>O nosso objectivo é servir os nossos clientes com competência e dedicação para que o nosso cliente volte sempre!<br><br>Ao adquirir produtos na nossa empresa deve saber que estará sempre a comprar qualidade ao melhor preço! Volte sempre, será sempre um gosto tê-lo de volta!</p>
       <h2><b><br><br>As nossas marcas</b></h2>       
     </div>
+
     <!--Brands-->
     <!--PC Marcas-->
 
